# reto_ma2003b

./: .gitignore  README.md  notas.txt  pyproject.toml  requirements.txt
data_cleaned/: master.parquet  master_with_clusters.parquet
html/: data_cleaning.html  eda.html  forecast_stock_demand.html  predictive_model_weekly.html  segmentation_and_clustering_sofia.html
notebooks/: Clusttering_data.ipynb  clusster_clients.ipynb  data_cleaning.ipynb  drop_clients_clasification.ipynb  eda.ipynb  forecast_stock_demand.ipynb  incomes_prediction.ipynb  segmentation_3_clusters.ipynb  segmentation_and_clustering.ipynb  segmentation_and_clustering_local.ipynb
reports/: variable_dictionary.md
src/: data_cleaning.ipynb
